infrastructure/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-route
spec:
  to:
    kind: Service
    name: fastapi-service  
  port:
    targetPort: 8000       
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
